# ADN-Sequence-Alignment

./: .gitignore  CMakeLists.txt  Makefile
doc/html/: Needleman-Wunsch-recmemo_8c.html  Needleman-Wunsch-recmemo_8h.html  functions.html  functions_vars.html
doc/html/search/: all_7.js  all_c.js  all_d.js  variables_0.js  variables_2.js  variables_3.js
doc/latex/: Needleman-Wunsch-recmemo_8c.tex  Needleman-Wunsch-recmemo_8h.tex
rapport-a-rendre/: rapport-AOD-adn.tex
src/: Needleman-Wunsch-CA.c  Needleman-Wunsch-CA.h  Needleman-Wunsch-CO.c  Needleman-Wunsch-CO.h  Needleman-Wunsch-iter.c  Needleman-Wunsch-itermemo.c  Needleman-Wunsch-itermemo.h  Needleman-Wunsch-recmemo.c  Needleman-Wunsch-recmemo.h  costs.h  distanceEdition.c
tests/: Makefile-test  cachegrind.out.14662  cachegrind.out.14675  cachegrind.out.14681  cachegrind.out.35042  cachegrind.out.35667  cachegrind.out.5660  cachegrind.out.8998  cachegrind.out.9125  valgrind4perf1000.output  valgrind4perf2000.output
